# swift-api

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: python-ci.yml
app/: main.py
app/api/v1/: __init__.py  swift_code.py
app/core/: database.py  logger.py
app/crud/: __init__.py  swift_code_crud.py
app/data/: Interns_2025_SWIFT_CODES.xlsx
app/models/: __init__.py  models.py
app/routers/: __init__.py  swift_code.py  swift_codes.py
app/schemas/: __init__.py  swift_code.py  swift_code_schema.py
app/services/: __init__.py  swift_code_parser.py
docker/: Dockerfile  docker-compose.yml
swift-api/src/: __init__.py  parse_swift_file.py
swift-api/tests/: test_parse_swift_file.py
tests/: conftest.py  test_database.py  test_swift_code_parser.py  test_swift_codes.py
tests/integration/: test_database_setup.py  test_endpoints.py
tests/unit/: test_app_startup.py  test_swift_code_parser.py  test_swift_codes.py  test_swift_codes_crud.py
