[tool.poetry]
name = "swift-api"
version = "0.1.0"
description = "Service for parsing, storing and retrieving SWIFT codes."
authors = ["Adam Staniszewski"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11"
alembic = ">=1.15.2,<2.0.0"
asyncpg = ">=0.30.0,<0.31.0"
fastapi = ">=0.115.12,<0.116.0"
httpx = ">=0.28.1,<0.29.0"
openpyxl = ">=3.1.5,<4.0.0"
pandas = ">=2.2.3,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
pytest-asyncio = ">=0.26.0,<0.27.0"
pytest-mock = ">=3.14.0,<4.0.0"
sqlalchemy = ">=2.0.40,<3.0.0"
uvicorn = ">=0.34.2,<0.35.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.1.1"
pytest-env = "^1.1.5"
ruff = "^0.11.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"